@@ -110,6 +110,7 @@ Version 1.9.0-svn:
    * Most sidebar tooltips have now a category indication
    * Tooltips of ellipsed text are grouped in the last visible item's tooltip
    * Increase a little tooltip's opacity
+   * Render grid above foreground terrain
  * WML Engine:
    * Deprecated [set_variable]'s random key, use rand instead
    * Renamed [unit][status] healable to unhealable so it can default to 'no'
